builder.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kaniko
spec:
  containers:
  - name: kubectl
    image: anooprs471/jenkins-slave-cnb-jdk11-remote4_13:v2
    volumeMounts:
      - name: docker-sock
        mountPath: /var/run/docker.sock
  - name: kaniko
    image: gcr.io/kaniko-project/executor:debug
    command:
    - /busybox/cat
    tty: true
    volumeMounts:
      - name: kaniko-secret
        mountPath: /kaniko/.docker
  volumes:
    - name: kaniko-secret
      secret:
        secretName: regcred
        items:
          - key: .dockerconfigjson
            path: config.json
    - name: docker-sock
      hostPath:
        path: /var/run/docker.sock
