app.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: rollout
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calculator-demo
  namespace: rollout
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calculator-demo
  template:
    metadata:
      labels:
        app: calculator-demo
    spec:
      serviceAccountName: rollout-admin
      containers:
        - name: calculator-demo
          image: anooprs471/test-flask-calculator:<TAG>
          resources:
            limits:
              memory: "1Gi"
              cpu: "1000m"
            requests:
              memory: "500Mi"
              cpu: "500m"
          ports:
            - name: httpport
              containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: rollout-service
  namespace: rollout
spec:
  selector:
    app: calculator-demo
  type: ClusterIP
  ports:
    - name: httpport
      port: 3000
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-web
  namespace: rollout
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: ip
    #alb.ingress.kubernetes.io/subnets: subnet-0f37ed79ce205c830, subnet-0f182d61d55178219, subnet-00358cfac04c4d7d9
    #alb.ingress.kubernetes.io/security-groups: sg-08a1914be9d711c44
spec:
  rules:
  - http:
      paths:
      - path: /calc
        pathType: Prefix
        backend:
          service:
            name: calculator-demo
            port:
              number: 3000
